--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,4 +4,4 @@
     <router-outlet></router-outlet>
     <app-footer></app-footer>
 </div>
-<!-- <app-modal-usuario></app-modal-usuario> -->
+<app-subir-archivo></app-subir-archivo>
