--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -60,7 +60,7 @@
                                 </a>
                             </li>
 
-                            <li class="nav-item">
+                            <!-- <li class="nav-item">
                                 <a href="#" class="nav-link">
                                     <i class='bx bx-envelope'></i> <span>My Inbox</span>
                                 </a>
@@ -76,7 +76,7 @@
                                 <a href="#" class="nav-link">
                                     <i class='bx bx-cog'></i> <span>Settings</span>
                                 </a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
 
