--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -27,7 +27,7 @@
             <li class="nav-item">
                 <a routerLink="dashboard" class="nav-link" aria-expanded="false">
                     <span class="icon"><i class='bx bx-analyse'></i></span>
-                    <span class="menu-title">Analytics</span>
+                    <span class="menu-title">Dashboard</span>
                 </a>
             </li>
             <li class="nav-item-title">
@@ -39,7 +39,18 @@
                     <span class="menu-title">Usuarios</span>
                 </a>
             </li>
-
+            <li class="nav-item">
+                <a routerLink="agente" class="nav-link" aria-expanded="false">
+                    <span class="icon"><i class='bx bxs-user-detail'></i></span>
+                    <span class="menu-title">Agente</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a routerLink="accesos" class="nav-link" aria-expanded="false">
+                    <span class="icon"><i class=' bx bx-notepad'></i></span>
+                    <span class="menu-title">Accesos</span>
+                </a>
+            </li>
             <li class="nav-item">
                 <a routerLink="novedades" class="nav-link" aria-expanded="false">
                     <span class="icon"><i class=' bx bx-notepad'></i></span>
