--- a/src/app/components/modal-usuario/modal-usuario.component.html
+++ b/src/app/components/modal-usuario/modal-usuario.component.html
@@ -9,62 +9,114 @@
         aria-modal="true" 
         style="display: block; padding-right: 17px;"
     >
-        <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-dialog modal-lg" role="document" *ngIf="novedad">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Crear Novedad</h5>
+                    <h3 class="modal-title">Novedad No. {{novedad.id}}</h3>
                     <button type="button" (click)="cerrarModal()" class="close" data-dismiss="modal">
                         <span aria-hidden="true">×</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form [formGroup]="miFormulario" (ngSubmit)="agregar()">
-                        <div class="form-group">
-                            <label>Seleccionar Tipo</label>
-                            <select formControlName="tipo" class="form-control" >
-                                <option>Accidente Transito</option>
-                                <option>Manifestación</option>
-                                <option>Robo</option>
-                                <option>Cambio Turno</option>
-                            </select>
+                    <div class="invoice-area mb-30">
+                        <div class="invoice-header mb-30 d-flex justify-content-between">
+                            <div class="invoice-left-text">
+                                <h3 class="mb-0">{{ novedad.tipo }}</h3>
+                                <p class="mt-2 mb-0">
+                                    <strong>Novedad : </strong> {{ horaMes(novedad.fecha) }} <br>
+                                    <strong>Hora Novedad : </strong> {{ novedad.hora }} <br>
+                                    <strong>Creado : </strong>{{  horaMes(novedad.createdAt) }} <br></p>
+                            </div>
+        
+                            <div class="invoice-right-text">
+                                <h3 class="mb-0 text-uppercase">{{ novedad.puesto }}</h3>
+                            </div>
                         </div>
-                        <div class="form-group">
-                            <label>Hora</label>
-                            <input type="time" formControlName="hora" class="form-control" placeholder="Ingrese hora">
+        
+                        <div class="invoice-middle mb-30">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="text">
+                                        <strong>Preliminar : </strong> {{ novedad.preliminar }}<br><br>
+                                        <strong>Descripción : </strong> {{ novedad.descripcion }}
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="form-group">
-                            <label>Fecha</label>
-                            <input type="date" formControlName="fecha" class="form-control" placeholder="Ingrese fecha">
+<!--         
+                        <div class="invoice-table table-responsive mb-30">
+                            <table class="table table-bordered">
+                                <thead>
+                                    <tr>
+                                        <th>#</th>
+                                        <th>Description</th>
+                                        <th>Unit Price</th>
+                                        <th>Total</th>
+                                    </tr>
+                                </thead>
+        
+                                <tbody>
+                                    <tr>
+                                        <td>01</td>
+                                        <td>Apple iPhone XR (64GB)</td>
+                                        <td class="text-right">$100.00</td>
+                                        <td class="text-right">$100.00</td>
+                                    </tr>
+        
+                                    <tr>
+                                        <td>01</td>
+                                        <td>Apple iPhone XR Black</td>
+                                        <td class="text-right">$25.00</td>
+                                        <td class="text-right">$50.00</td>
+                                    </tr>
+        
+                                    <tr>
+                                        <td>01</td>
+                                        <td>HeadPhone</td>
+                                        <td class="text-right">$15.00</td>
+                                        <td class="text-right">$45.00</td>
+                                    </tr>
+        
+                                    <tr>
+                                        <td>01</td>
+                                        <td>HeadPhone</td>
+                                        <td class="text-right">$15.00</td>
+                                        <td class="text-right">$45.00</td>
+                                    </tr>
+        
+                                    <tr>
+                                        <td class="text-right" colspan="3"><strong>Subtotal</strong></td>
+                                        <td class="text-right">$195.00</td>
+                                    </tr>
+        
+                                    <tr>
+                                        <td class="text-right" colspan="3"><strong>Sales Tax 5.0%</strong></td>
+                                        <td class="text-right">$9.75</td>
+                                    </tr>
+        
+                                    <tr>
+                                        <td class="text-right total" colspan="3"><strong>Total</strong></td>
+                                        <td class="text-right total-price"><strong>$204.75</strong></td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
-                        <div class="form-group">
-                            <label>Seleccionar Puesto</label>
-                            <select formControlName="puesto" class="form-control">
-                                <option>Aguila 1</option>
-                                <option>Aguila 2</option>
-                                <option>Aguila 3</option>
-                                <option>Aguila 4</option>
-                                <option>Aguila 5</option>
-                            </select>
+         -->
+                        <div class="invoice-btn-box text-right point">
+                            <a (click)="cerrarModal()" class="default-btn"><i class=" bx bx-log-in"></i>&nbsp;Cerrar</a>
+                            <!-- <a href="#" class="default-btn"><i class="bx bx-printer"></i> Print</a>
+                            <a href="#" class="optional-btn"><i class="bx bx-paper-plane"></i> Send Invoice</a> -->
                         </div>
-                        <div class="form-group">
-                            <label>Preliminar</label>
-                            <textarea formControlName="preliminar" type="text" class="form-control" rows="3" placeholder="Ingrese la Preliminar"></textarea>
-                        </div>
-                        <div class="form-group">
-                            <label>Descripción</label>
-                            <textarea type="text" formControlName="descripcion" class="form-control" rows="3" placeholder="Ingrese la Descripción"></textarea>
-                            
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" (click)="cerrarModal()" class="btn btn-outline-danger rounded-pill" data-dismiss="modal">Close</button>
-                            <button type="submit" class="btn btn-outline-info rounded-pill" >Guardar</button>
-                        </div>
-                    </form>
+                    </div>
+                       
+                    <!-- <div class="modal-footer">
+                        <button type="button" (click)="cerrarModal()" class="btn btn-outline-danger rounded-pill" data-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-outline-info rounded-pill" >Guardar</button>
+                    </div> -->
                 </div>
             </div>
         </div>
     </div>
 </div>
-
 
 
