--- a/src/app/pages/archivos/archivos.component.html
+++ b/src/app/pages/archivos/archivos.component.html
@@ -1,97 +1,120 @@
+
 <div class="card mb-30">
     <div class="card-header d-flex justify-content-between align-items-center">
-        <h3>Gestion de Archivo</h3>
-
-        <div class="dropdown">
-            <button class="dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true"
-                aria-expanded="false">
-                <i class="bx bx-dots-horizontal-rounded"></i>
-            </button>
-            <div class="dropdown-menu">
-                <a class="dropdown-item d-flex align-items-center" href="#">
-                    <i class="bx bx-show"></i> View
-                </a>
-                <a class="dropdown-item d-flex align-items-center" href="#">
-                    <i class="bx bx-edit-alt"></i> Edit
-                </a>
-                <a class="dropdown-item d-flex align-items-center" href="#">
-                    <i class="bx bx-trash"></i> Delete
-                </a>
-                <a class="dropdown-item d-flex align-items-center" href="#">
-                    <i class="bx bx-printer"></i> Print
-                </a>
-                <a class="dropdown-item d-flex align-items-center" href="#">
-                    <i class="bx bx-download"></i> Download
-                </a>
-            </div>
-        </div>
+        <h3>Crear Archivo</h3>
     </div>
-
-    <div class="card-body">
-        
-
-        <button type="button" class="btn btn-primary rounded-pill mt-5" data-toggle="modal" data-target=".basicModalLG">
-            Crear Archivo
-        </button>
-
-        <!-- Modal -->
-        <div class="modal fade basicModalLG" role="dialog" aria-hidden="true">
-            <div class="modal-dialog modal-lg" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title">Crear Archivo</h5>
-                        <button type="button" class="close" data-dismiss="modal">
-                            <span aria-hidden="true">×</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <form>
-                            <div class="form-group">
-                                <label>Nombre</label>
-                                <input type="text" class="form-control" placeholder="Ingrese el nombre">
-                            </div>
-                            <div class="form-group">
-                                <label>Correo</label>
-                                <input type="email" class="form-control" placeholder="Ingrese el nombre">
-                            </div>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary rounded-pill">Guardar</button>
-                    </div>
+    <form [formGroup]="miFormulario" (ngSubmit)="agregar()">
+        <div class="row">
+            <div class="col">
+                <div class="form-group">
+                    <label>Seleccionar Tipo</label>
+                    <select formControlName="tipo" class="form-control" >
+                        <option value="Oficio">Oficio</option>
+                        <option value="Memorandúm">Memorandúm</option>
+                        <option value="Pedidos Almacen">Pedidos Almacen</option>
+                        <option value="Viaticos">Viaticos</option>
+                        <option value="CV">CV</option>
+                    </select>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label>Seleccionar Clasificación</label>
+                    <select formControlName="origen" class="form-control">
+                        <option value="Salida">Salida</option>
+                        <option value="Ingreso">Ingreso</option>
+                    </select>
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col">
+                <div class="form-group">
+                    <label>Seleccionar Unidad</label>
+                    <select formControlName="unidad" class="form-control">
+                        <option value="Seguridad">Seguridad</option>
+                        <option value="Otros">Otros</option>
+                    </select>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label>Numero</label>
+                    <input type="text" formControlName="numero" class="form-control" placeholder="Ingrese numero de documento.">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="form-group">
+                    <label>Fecha</label>
+                    <input formControlName="fecha" type="date" class="form-control" >
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label>Descripción</label>
+                    <textarea type="text" formControlName="descripcion" class="form-control" rows="3" placeholder="Ingrese la Descripción"></textarea>
+                    
+                </div>
+            </div>
+        </div>
+       
+        
+        <button type="submit" class="btn btn-primary rounded-pill " >
+            Guardar
+        </button>
+    </form>
+   
+</div>
 
-        <div class="demo-code-preview" data-label="Listado de Archivos">
-            <table class="table">
-                <thead class="thead-light">
+<div class="card mb-30">
+    <div class="card-header d-flex justify-content-between align-items-center">
+        <h3>Listado de Archivos Total : {{totalArchivos}}</h3>
+
+       
+       
+    </div>
+
+    <div class="card-body">
+       
+        <div *ngIf="respuesta" class="alert alert-primary alert-dismissible fade show" role="alert">
+            <strong>Buen Trabajo!!!</strong> &nbsp; &nbsp; &nbsp; Registro Actualizado Correctamente!!
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+
+        <div class="spinner-border text-primary animated fadeIn fast" role="status"  *ngIf="cargando">
+            <span class="sr-only">Loading...</span>
+        </div>
+        <div class="demo-code-preview" data-label="Listado de Archivos" *ngIf="!cargando">
+
+            <table  datatable [dtOptions]="dtOptions" class="row-border hover" >
+                <thead >
                     <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">First</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
+                        <th>#</th>
+                        <th>Tipo</th>
+                        <th>Correlativo</th>
+                        <th>Departamento o Unidad</th>
+                        <th>Salida o Ingreso</th>
+                        <th>Descripcion</th>
+                        <th>Acciones</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>Larry</td>
-                        <td>the Bird</td>
-                        <td>@twitter</td>
+                <tbody  >
+                    <tr *ngFor="let item of archivos">
+                        <td>{{item.id}}</td>
+                        <td>{{item.tipo}}</td>
+                        <td>{{item.numero}}</td>
+                        <td>{{item.unidad}}</td>
+                        <td>{{item.origen}}</td>
+                        <td>{{item.descripcion}}</td>
+                        <td>
+                            <a href="#" class="btn btn-outline-info mr-1" ><i class=" bx bxs-low-vision"></i></a>
+                            <a href="#" class="btn btn-outline-info mr-1" ><i class="bx bx-edit-alt"></i></a>
+                            <a href="javascript:void(0);"  (click)="eliminarArchivo(item)" class="btn btn-outline-danger"><i class="bx bx-trash"></i></a>
+                        </td>
                     </tr>
                 </tbody>
             </table>
