--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,170 @@
-<p>dashboard works!</p>
+<div class="welcome-area">
+    <div class="row m-0 align-items-center">
+        <div class="col-lg-5 col-md-12 p-0">
+            <div class="welcome-content">
+                <h1 class="mb-2">Hi, Welcomeback  {{usuario.nombre | slice:0:20}}</h1>
+                <p class="mb-0">Just Do Somethings Better</p>
+            </div>
+        </div>
+
+        <div class="col-lg-7 col-md-12 p-0">
+            <div class="welcome-img">
+                <img src="assets\img\welcome-img.png" alt="image">
+            </div>
+        </div>
+    </div>
+</div>
+<div class="ecommerce-stats-area">
+    <div class="row">
+        <div class="col-lg-3 col-sm-6 col-md-6">
+            <div class="single-stats-card-box">
+                <div class="icon">
+                    <i class="bx bxs-user-check"></i>
+                </div>
+                <span class="sub-title">Usuarios</span>
+                <h3>{{totalUsuarios}} </h3>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-sm-6 col-md-6">
+            <div class="single-stats-card-box">
+                <div class="icon">
+                    <i class="bx bxs-detail"></i>
+                </div>
+                <span class="sub-title">Novedades</span>
+                <h3>{{totalNovedades}}</h3>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-sm-6 col-md-6">
+            <div class="single-stats-card-box">
+                <div class="icon">
+                    <i class="bx bxs-folder-open"></i>
+                </div>
+                <span class="sub-title">Archivos</span>
+                <h3>{{totalArchivos}}</h3>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-sm-6 col-md-6">
+            <div class="single-stats-card-box">
+                <div class="icon">
+                    <i class=" bx bxs-user-detail"></i>
+                </div>
+                <span class="sub-title">Visitas</span>
+                <h3>{{totalVisitas}}</h3>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    
+
+   
+    <div class="col-lg-6">
+        <div class="card mb-30">
+            <div class="card-header d-flex justify-content-between align-items-center">
+                <h3>With Indicators</h3>
+
+               
+            </div>
+
+            <div class="card-body">
+                <p>You can also add the indicators to the carousel, alongside the controls, too.</p>
+
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class=""></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2" class=""></li>
+                    </ol>
+
+                    <div class="carousel-inner">
+                        <div class="carousel-item active carousel-item-left">
+                            <img class="d-block w-100" src="assets/seg/7.jpg" alt="First slide">
+                        </div>
+
+                        <div class="carousel-item carousel-item-next carousel-item-left">
+                            <img class="d-block w-100" src="assets/seg/8.jpg" alt="First slide">
+                        </div>
+
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/seg/9.jpg" alt="First slide">
+                        </div>
+                    </div>
+
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-lg-6">
+        <div class="card mb-30">
+            <div class="card-header d-flex justify-content-between align-items-center">
+                <h3>With Indicators</h3>
+
+                
+            </div>
+
+            <div class="card-body">
+                <p>Add captions to your slides easily with the <span class="text-danger font-weight-bold">.carousel-caption</span> element within any <span class="font-weight-bold text-danger">.carousel-item</span>.</p>
+
+                <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleCaptions" data-slide-to="0" class=""></li>
+                        <li data-target="#carouselExampleCaptions" data-slide-to="1" class="active"></li>
+                        <li data-target="#carouselExampleCaptions" data-slide-to="2" class=""></li>
+                    </ol>
+
+                    <div class="carousel-inner">
+                        <div class="carousel-item active carousel-item-left">
+                            <img class="d-block w-100" src="assets/seg/3.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="text-white">First slide label</h5>
+                                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item carousel-item-next carousel-item-left">
+                            <img class="d-block w-100" src="assets/seg/2.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="text-white">Second slide label</h5>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            </div>
+                        </div>
+
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/seg/1.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="text-white">Third slide label</h5>
+                                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+
+                    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    
+</div>
+
