--- a/src/app/components/subir-archivo/subir-archivo.component.html
+++ b/src/app/components/subir-archivo/subir-archivo.component.html
@@ -12,7 +12,7 @@
         <div class="modal-dialog modal-lg" role="document" >
             <div class="modal-content">
                 <div class="modal-header">
-                    <h3 class="modal-title">Subir Archivos Nombre modelo</h3>
+                    <h3 class="modal-title">Subir Archivos {{modelo}}</h3>
                     <button type="button" (click)="cerrarModal()" class="close" data-dismiss="modal">
                         <span aria-hidden="true">×</span>
                     </button>
@@ -25,26 +25,24 @@
                                 <div class="col-lg-12">
                                     <div class="text">
                                       <!--INICIO--->
-                                      <div class="demo-code-preview mt-5" data-label="Subir Archivo">
-                                        <div class="highlight" id="formsGrid1">
+                                        <div class="demo-code-preview mt-5" data-label="Subir Archivo">
+                                            <div class="highlight" id="formsGrid1">
                                            
-                                                <div class="row" *ngIf="visita">
+                                                <div class="row" *ngIf="modelo">
                                                     <div class="col col-sm-6 col-md-6 col-lg-6 col-xl-6">
-                                                        <label for="images" class="drop-container">
                                                            
                                                             <input 
                                                             type="file" 
                                                             id="images" 
-                                                            accept="image/*" 
+                                                            accept="image/*"
                                                             required
                                                             (change)="cambiarImagen($event)"
                                                             >
-                                                          </label>
                                                        
                                                     </div>
                                                     <div class="col col-sm-6 col-md-6 col-lg-6 col-xl-6">
                                                         <label for="images" class="drop-container">
-                                                            <img *ngIf="!imgTemporal" [src]="visita.imagenUrl" width="100" height="100">
+                                                            <img *ngIf="!imgTemporal" [src]="imagenUrl" width="100" height="100">
                                                             <img *ngIf="imgTemporal"  [src]="imgTemporal" width="100" height="100">
                                                         </label>
                                                     </div>
@@ -58,11 +56,15 @@
                                                     Actualizar Imagen
                                                 </button>
                                          
+                                            </div>
                                         </div>
-                                    </div>
                                       <!---FIN-->
+                                      <div class="invoice-btn-box text-right point mt-5">
+                                        <a (click)="cerrarModal()" class="default-btn"><i class=" bx bx-log-in"></i>&nbsp;Cerrar</a>
+                                    </div>
                                     </div>
                                 </div>
+                                
                             </div>
                         </div>
 
