--- a/src/app/pages/novedades/novedades.component.html
+++ b/src/app/pages/novedades/novedades.component.html
@@ -99,6 +99,7 @@
                         <td>{{item.puesto}}</td>
                         <td class="col-30">{{item.preliminar}}</td>
                         <td>
+                            <a  class="iconos observar mr-2"  (click)="abrirModalArchivo(item)" data-toggle="tooltip" data-placement="top" title="Subir Archivo"><i class="bx bx-cloud-upload"></i></a>
                             <a  class="iconos observar mr-2" (click)="abrirModal(item)"  data-toggle="tooltip" data-placement="top" title="Ver Novedad"><i class=" bx bxs-low-vision"></i></a>
                             <a  class="iconos editar mr-2" (click)="abrirModalEditar(item)" ><i class="bx bx-edit-alt"  data-toggle="tooltip" data-placement="top" title="Editar Novedad"></i></a>
                             <a  (click)="eliminarNovedad(item)" class="iconos eliminar"  data-toggle="tooltip" data-placement="top" title="Eliminar Novedad"><i class="bx bx-trash"></i></a>
