--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
 <div class="sidemenu-area" [ngClass]="sidebarClass">
     <div class="sidemenu-header">
         <a routerLink="dashboard" class="navbar-brand d-flex align-items-center">
-            <img src="assets\img\small-logo.png" alt="image">
+            <img src="https://cc.gob.gt/wp-content/uploads/2020/06/Elementos-02.png" height="50" width="50" alt="image">
             <span>Seg</span>
         </a>
 
@@ -33,7 +33,7 @@
             <li class="nav-item-title">
                 Gestiones
             </li>
-            <li class="nav-item">
+            <li class="nav-item" >
                 <a routerLink="usuario" class="nav-link" aria-expanded="false">
                     <span class="icon"><i class=' bx bxs-user-circle'></i></span>
                     <span class="menu-title">Usuarios</span>
