--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -2,8 +2,8 @@
     <div class="row m-0 align-items-center">
         <div class="col-lg-5 col-md-12 p-0">
             <div class="welcome-content">
-                <h1 class="mb-2">Hi, Welcomeback  {{usuario.nombre | slice:0:20}}</h1>
-                <p class="mb-0">Just Do Somethings Better</p>
+                <h1 class="mb-2"> Bienvenido {{usuario.nombre | slice:0:20}}</h1>
+                <p class="mb-0">"Hoy es un buen día para creer que lo imposible se realizará porque Dios está a tu lado y te ayudará en lo que hagas"</p>
             </div>
         </div>
 
@@ -65,45 +65,24 @@
     <div class="col-lg-6">
         <div class="card mb-30">
             <div class="card-header d-flex justify-content-between align-items-center">
-                <h3>With Indicators</h3>
+                <h3>2023</h3>
 
                
             </div>
 
             <div class="card-body">
-                <p>You can also add the indicators to the carousel, alongside the controls, too.</p>
+               
 
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class=""></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="1" class="active"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="2" class=""></li>
-                    </ol>
-
-                    <div class="carousel-inner">
-                        <div class="carousel-item active carousel-item-left">
-                            <img class="d-block w-100" src="assets/seg/7.jpg" alt="First slide">
-                        </div>
-
-                        <div class="carousel-item carousel-item-next carousel-item-left">
-                            <img class="d-block w-100" src="assets/seg/8.jpg" alt="First slide">
-                        </div>
-
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="assets/seg/9.jpg" alt="First slide">
-                        </div>
-                    </div>
-
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
+                <ngx-charts-pie-chart
+                [view]="view"
+                [scheme]="colorScheme"
+                [results]="data"
+                [gradient]="gradient"
+                [legendPosition]="legendPosition"
+                [labels]="showLabels"
+                [doughnut]="isDoughnut"
+                >
+                </ngx-charts-pie-chart>
             </div>
         </div>
     </div>
@@ -111,56 +90,23 @@
     <div class="col-lg-6">
         <div class="card mb-30">
             <div class="card-header d-flex justify-content-between align-items-center">
-                <h3>With Indicators</h3>
-
-                
+                <h3>2023</h3>                
             </div>
-
             <div class="card-body">
-                <p>Add captions to your slides easily with the <span class="text-danger font-weight-bold">.carousel-caption</span> element within any <span class="font-weight-bold text-danger">.carousel-item</span>.</p>
-
-                <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleCaptions" data-slide-to="0" class=""></li>
-                        <li data-target="#carouselExampleCaptions" data-slide-to="1" class="active"></li>
-                        <li data-target="#carouselExampleCaptions" data-slide-to="2" class=""></li>
-                    </ol>
-
-                    <div class="carousel-inner">
-                        <div class="carousel-item active carousel-item-left">
-                            <img class="d-block w-100" src="assets/seg/3.jpg" alt="First slide">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5 class="text-white">First slide label</h5>
-                                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item carousel-item-next carousel-item-left">
-                            <img class="d-block w-100" src="assets/seg/2.jpg" alt="First slide">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5 class="text-white">Second slide label</h5>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            </div>
-                        </div>
-
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="assets/seg/1.jpg" alt="First slide">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5 class="text-white">Third slide label</h5>
-                                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-
-                    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
+                
+                <ngx-charts-bar-horizontal
+                    [view]="view"
+                    [scheme]="colorScheme"
+                    [results]="data"
+                    [gradient]="gradient"
+                    [xAxis]="showXAxis"
+                    [yAxis]="showYAxis"
+                    [showXAxisLabel]="showXAxisLabel"
+                    [showYAxisLabel]="showYAxisLabel"
+                    [xAxisLabel]="xAxisLabel"
+                    [yAxisLabel]="yAxisLabel"
+                    >
+                </ngx-charts-bar-horizontal>
             </div>
         </div>
     </div>
